--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <style>
         body{
-            background-color: purple;
+            background-color: red;
         }
     </style>
     
